--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.12.3",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "nodemon": "^3.0.3"
