--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
