--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "html-react-parser": "^5.1.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
