--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
-    "nodemon": "^3.0.3"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.3",
+    "path": "^0.12.7"
   }
 }
