--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
